<resources>
    <string name="app_name">LoadApp</string>
    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_notification_channel_name">Download notifications</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="button_text_download_default">Download</string>
    <string name="button_text_download_in_progress">We are downloading</string>
    <string name="button_return_text_ok">OK</string>
    <string name="text_view_file_name">File name:</string>
    <string name="text_view_file_status">Status:</string>
    <string name="status">Check the status</string>
    <string name="content_description_download_button">download</string>
    <string name="label_activity_download_status">Download status</string>
</resources>