<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.viewModels.StatusViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <RadioGroup
            android:id="@+id/radio_group_download_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/download_button"
            android:layout_margin="16dp">

            <RadioButton
                android:id="@+id/radio_button_glide_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/glide"/>

            <RadioButton
                android:id="@+id/radio_button_loadApp_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/loadApp"/>

            <RadioButton
                android:id="@+id/radio_button_retrofit_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/retrofit"/>

        </RadioGroup>

        <com.example.myapplication.DownloadButton
            android:id="@+id/download_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:text="@string/button_text_download_default"
            android:contentDescription="@string/content_description_download_button"
            app:loadLinePercents="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>